--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 pii_neurobert_mini_model filter=lfs diff=lfs merge=lfs -text
 PIIDetectionModel.mlpackage filter=lfs diff=lfs merge=lfs -text
+data.json filter=lfs diff=lfs merge=lfs -text
